--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@ body{
     width: auto;
     height: 100vh;
     font-family: sans-serif;
+    
 }
 nav {
     margin: 0%;
@@ -11,7 +12,6 @@ nav {
     align-items: center;
     background-color: rgba(255, 166, 0, 0.381);
     position: sticky;
-   
     top: 0;
 }
 
@@ -98,4 +98,146 @@ span{
 }
 .app{
     margin-top: 5%;
+}
+/* -----------------------------------------Page Customer------------------------------------------------------- */
+.container{
+    margin: -1.5%;
+    background-image: url(../img/bac_customer.png);
+    background-size: cover;
+    height: 160%;
+    text-align: center;
+}
+.search img{
+    background-color: orange;
+    padding: 1%;
+    
+    border-top-right-radius:20% ;
+    border-bottom-right-radius:20% ;
+}
+.search input{
+    border: 2px solid orange;
+    padding: 1%;
+    width: 50%;
+    
+}
+.search p {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 5%;
+}
+.food h3{
+    text-align: center;
+}
+.choose{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.card{
+    border: 2px solid orange;
+    width: 15%;
+    padding: 5px;
+    margin: 1%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.name-food,.other{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.other button{
+    border: none;
+    background-color: orangered;
+    padding: 5%;
+}
+.delete:hover{
+    cursor: pointer;
+    background-color: red;
+}
+.edit:hover{
+    cursor: pointer;
+    background-color: red;
+}
+/* -----------------------------------------food dialog--------------------------------- */
+#foods-dialog{
+    padding-top: 5%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 10;
+    margin-bottom: 10%;
+
+}
+dialog{
+    width: 50%;
+    border: 5px solid orangered;
+    
+}
+section{ 
+    display: flex;
+    flex-direction: column;
+    
+}
+.to-order{
+    background-color: rgba(255, 166, 0, 0.226);
+    width: 30%;
+    margin-top: -4.5%;
+    border-radius: 5%;
+    border: 4px solid gray;
+    
+}
+::placeholder{
+    border: none;
+    color: black;
+    font-size: 15px;
+}
+.to-order menu button{
+    border-radius:5px;
+    font-weight: bold;
+}
+.to-order header{
+    font-size: 20px;
+    text-align: center;
+    color: rgb(243, 185, 13);
+}
+.to-order section input{
+    padding: 1%;
+
+}
+section input{
+    margin-bottom:5%;
+    margin-top:5%;
+    padding: 3%;
+    
+}
+.to_do{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+menu{
+    text-align: end;
+}
+menu button{
+    background-color: orange;
+    border: none;
+    padding: 2%;
+    margin-right: 2%;
+}
+header{
+    font-weight: bold;
+    font-size: 30px;
+}
+
+
+#btn_Add{
+    background-color: orange;
+    border: none;
+    padding:10px 30px 10px 30px;
+    font-size: 30px;
+    font-weight: bold;
 }
