--- a/view/customer/customer.html
+++ b/view/customer/customer.html
@@ -20,33 +20,38 @@
           <li><a href="views/play/play.html">CARD</a></li>
         </ul>
       </nav>
-      <div id="foods-dialog" " style="display: none;">
+      <div id="foods-dialog" style="display: none;">
         <dialog class="to-order" open>
           <header>🍔🍕🍕fast to fast for to eat🍕🍕🍔</header>
   
           <section >
-            <input id="textPrice" type="number" placeholder="Number of orders*" />
-            <input id="" type="text" placeholder="Your location*"/>
-            <input id="" type="text" placeholder="Phone number*"/>
-            <input id="" type="text" placeholder="Your location*"/>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Other..."></textarea>
+            <input id="nu" type="number" placeholder="Number of orders*" />
+            <input id="loc" type="text" placeholder="Your location*"/>
+            <input id="pho" type="text" placeholder="Phone number*"/>
+            <input id="date" type="date" placeholder=""/>
+            
+            <textarea name="" id="mess" cols="30" rows="10" placeholder="Other..."></textarea>
           </section>
           <menu>
             <button onclick="onCancel()">Cancel</button>
-            <button onclick="onCreate()">Order Now</button>
+            <button onclick="OrderNow()">Order Now</button>
+            <div class="choosed"></div>
           </menu>
         </dialog>
       </div>
       <div class="container">
         <div class="search">
-            <p><input type="search" placeholder="waht are you looking for..."><img src="../../img/search.png" alt=""  width="1%"></p>
-            <h2><span>Choose</span> from dozens of cuisines and order online for home <span>delivery</span></h2>
+            <p><input type="search"  onkeyup="myFunction()" placeholder="waht are you looking for..."> <img src="../../img/search.png" alt=""  width="1%"></p>
+          </div>
         </div>
-      </div>
-      <div class="food">
-        <h3><span>Other</span> all the food that interested for you</h3>
+        <div class="food">
+      
+          <h2><span>Choose</span> from dozens of cuisines and order online for home <span>delivery</span></h2>
         <div class="choose"></div>
       </div>
+
+
+
       <div class="footer">
         <div class="help">
             <h3>Follow Fastfood Page</h3>
