--- a/view/edit/edit.html
+++ b/view/edit/edit.html
@@ -27,9 +27,9 @@
           <header>Create new question</header>
   
           <section>
-            <input id="textName" type="text" placeholder="name food" />
-            <input id="textPrice" type="text" placeholder="price of food" />
-            <input id="theImag" type="file" placeholder="img"/>
+            <input id="textName" type="text" placeholder="Name food*" />
+            <input id="textPrice" type="text" placeholder="Price of food*" />
+            <input id="theImag" type="text"  placeholder="link img from internet..."/>
           </section>
           <menu>
             <button onclick="onCancel()">Cancel</button>
@@ -39,15 +39,13 @@
       </div>
 
       <div class="food">
-        <h3><button id="btn_Add">Add Food</button></h3>
-        <div class="choose">
-          
-        </div>
+        <h3><button id="btn_Add" onclick="onAddfood()">Add Food</button></h3>
+        <div class="choose"></div>
+   
+        
       </div>
-
-      <div class="message">
-
-      </div>
+      
+      <!-- <div class="message"></div> -->
 </body>
 <script src="edit.js"></script>
 </html>
